# mdbook-tracey

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
.github/workflows/: ci.yml  release-prep.yml  release.yml
src/: config.rs  coverage.rs  lib.rs  main.rs  marker.rs  render.rs
test-book/: book.toml  forward.json
test-book/.config/tracey/: config.styx
test-book/fixture-src/: scheduler.rs  worker.rs
test-book/src/: chapter_1.md
tests/: preprocessor.rs
tests/fixtures/: blockquote.md  code-fence.md  html-block.md  inline.md  standalone.md
tests/snapshots/: preprocessor__blockquote_form.snap  preprocessor__code_fences_left_alone.snap  preprocessor__html_blocks_left_alone.snap  preprocessor__inline_mentions_survive.snap  preprocessor__standalone_anchor_only.snap  preprocessor__standalone_with_coverage.snap
